modifico url frontend

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGO_URI=mongodb+srv://dfedez:d0201134F@cluster0.pae1b.mongodb.net/ClonSocial?retryWrites=true&w=majority
 
-FRONTEND_URL=https://joyful-cannoli-ccecd6.netlify.app/
+FRONTEND_URL=https://joyful-cannoli-ccecd6.netlify.app
 
 JWT_SECRET=secreta
